syntax = "proto3";
package ostracon.rpc.grpc;
option  go_package = "github.com/Finschia/ostracon/rpc/grpc;coregrpc";

import "ostracon/abci/types.proto";
import "tendermint/abci/types.proto";

//----------------------------------------
// Request types

message RequestPing {}

message RequestBroadcastTx {
  bytes tx = 1;
}

//----------------------------------------
// Response types

message ResponsePing {}

message ResponseBroadcastTx {
  ostracon.abci.ResponseCheckTx     check_tx   = 1;
  tendermint.abci.ResponseDeliverTx deliver_tx = 2;
}

//----------------------------------------
// Service Definition

service BroadcastAPI {
  rpc Ping(RequestPing) returns (ResponsePing);
  rpc BroadcastTx(RequestBroadcastTx) returns (ResponseBroadcastTx);
}
